Issue #23696: Chain ZipImportError to the OSError